--- a/src/components/movies-list/movies-list.css
+++ b/src/components/movies-list/movies-list.css
@@ -4,6 +4,7 @@
     justify-content: center;
     row-gap: 2rem;
     column-gap: 3rem;
+    margin-bottom: 10px;
 }
 .spin {
     display: flex;
@@ -13,6 +14,11 @@
     margin-left: 3rem;
     margin-bottom: 10rem;
     margin-top: 10rem;
+}
+
+.message-info {
+    display: grid;
+    align-items: center;
 }
 
 @media screen and (max-width: 1000px) {
